force-app/main/default/objects/Student__c/fields/B_Com__c.field-meta.xml
<CustomField>
    <fullName>B_Com__c</fullName>
    <label>B.Com</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>STUDENT_PICKLIST__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Finance</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>