force-app/main/default/objects/Student__c/fields/B_Pharma__c.field-meta.xml
<CustomField>
    <fullName>B_Pharma__c</fullName>
    <label>B.Pharma</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>STUDENT_PICKLIST__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>