force-app/main/default/objects/Student__c/fields/B_tech__c.field-meta.xml
<CustomField>
    <fullName>B_tech__c</fullName>
    <label>B.tech</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>STUDENT_PICKLIST__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIVIL</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>