force-app/main/default/objects/Student__c/fields/STUDENT_PICKLIST__c.field-meta.xml
<CustomField>
    <fullName>STUDENT_PICKLIST__c</fullName>
    <label>STUDENT PICKLIST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>B.Pharma</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>