force-app/main/default/objects/Student__c/recordTypes/B_TECH.recordType-meta.xml
<RecordType>
    <fullName>B_TECH</fullName>
    <active>true</active>
    <label>B.TECH</label>
</RecordType>